2008-03-28 [colin]	1.101.0cvs24

	* src/vcal_folder.c
	* src/vcal_interface.h
	* src/vcalendar.h
		Better fix (let the caller update the GUI
		only once at the end of the adds/updates/deletions)

2008-03-28 [colin]	1.101.0cvs23

	* src/vcal_folder.c
	* src/vcalendar.c
	* src/vcalendar.h
		(Probably) Fix refresh after add/del/update

2008-03-27 [cleroy]	1.101.0cvs22

	* src/common-views.c
	* src/day-view.c
	* src/month-view.c
	* src/vcalendar.c
	* src/vcalendar.h
		Allow cancelling from right-click menu
		too

2008-03-27 [colin]	1.101.0cvs21

	* src/vcal_folder.c
		Probably fix delete_event so that
		update_event can work.

2008-03-27 [colin]	1.101.0cvs20

	* src/vcal_folder.c
	* src/vcal_interface.h
		Fix interface a bit, move free where logical
		Thanks to Holger Berndt

2008-03-25 [colin]	1.101.0cvs19

	* src/month-view.c
		Add week number and month on the first

2008-03-18 [colin]	1.101.0cvs18

	* src/vcal_folder.c
		Fix previous fix (don't break new subs)

2008-03-18 [colin]	1.101.0cvs17

	* src/vcal_folder.c
		Make sure we have an item before
		updating it.

2008-03-16 [colin]	1.101.0cvs16

	* src/month-view.c
		Better height allocation

2008-03-16 [colin]	1.101.0cvs15

	* src/month-view.c
		Require at least 250px vertical

2008-03-16 [colin]	1.101.0cvs14

	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
		Add context menus
		Harmonize both views callbacks

2008-03-15 [colin]	1.101.0cvs13

	* src/Makefile.am
	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
	* src/vcalendar.h
		Factorize stuff a bit

2008-03-14 [colin]	1.101.0cvs12

	* src/month-view.c
		Fix warning

2008-03-13 [colin]	1.101.0cvs11

	* src/day-view.c
		Fix alignment, ellipsize
	* src/month-view.c
		Ellipsize

2008-03-13 [colin]	1.101.0cvs10

	* src/day-view.c
	* src/month-view.c
		Fix display of todos (which have no DTEND)

2008-03-13 [colin]	1.101.0cvs9

	* src/day-view.c
	* src/vcal_folder.c