@@ -10,7 +10,7 @@ dnl plugin version
 MAJOR_VERSION=1
 MINOR_VERSION=101
 MICRO_VERSION=0
-EXTRA_VERSION=24
+EXTRA_VERSION=25
 
 #####
 #
