@@ -1,3 +1,9 @@
+2008-03-28 [colin]	1.101.0cvs25
+
+	* src/vcal_folder.c
+	* src/vcalendar.c
+		Fix crash on unparseable text/calendar parts.
+
 2008-03-28 [colin]	1.101.0cvs24
 
 	* src/vcal_folder.c
